<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.camera.view.PreviewView
        android:id="@+id/camera_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.phamnhantucode.photoeditor.views.CameraFaceDetectOverlayView
        android:id="@+id/face_detect_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="@id/camera_view"
        app:layout_constraintEnd_toEndOf="@id/camera_view"
        app:layout_constraintStart_toStartOf="@id/camera_view"
        app:layout_constraintTop_toTopOf="@id/camera_view" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_large"
        android:background="@drawable/bg_overlay"
        android:paddingHorizontal="@dimen/padding_medium"
        android:paddingVertical="@dimen/padding_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.phamnhantucode.photoeditor.views.CaptureButton
            android:id="@+id/capture_btn"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/switch_camera_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />

        <ImageView
            android:id="@+id/switch_camera_btn"
            android:layout_width="@dimen/size_ic_large"
            android:layout_height="@dimen/size_ic_large"
            android:layout_marginStart="@dimen/margin_large"
            android:contentDescription="@null"
            android:padding="@dimen/padding_medium"
            android:src="@drawable/ic_rotate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/capture_btn"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/camera_tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:background="@drawable/bg_overlay"
        android:padding="@dimen/padding_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/filter_btn"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@android:color/transparent"
            android:contentDescription="@null"
            android:src="@drawable/ic_filter_camera"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/camera_zoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_large"
        android:background="@drawable/bg_overlay"
        android:padding="@dimen/padding_medium"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/zoom_1x"
            android:layout_width="@dimen/size_ic_medium"
            android:layout_height="@dimen/size_ic_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:background="@drawable/bg_zoom_btn"
            android:text="@string/zoom_1x"
            android:textAlignment="center"
            android:textColor="@color/text_selected" />

        <TextView
            android:id="@+id/zoom_2x"
            android:layout_width="@dimen/size_ic_medium"
            android:layout_height="@dimen/size_ic_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:background="@drawable/bg_zoom_btn"
            android:text="@string/zoom_2x"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/zoom_4x"
            android:layout_width="@dimen/size_ic_medium"
            android:layout_height="@dimen/size_ic_medium"
            android:background="@drawable/bg_zoom_btn"
            android:text="@string/zoom_4x"
            android:textAlignment="center"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/filter_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/camera_zoom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <com.phamnhantucode.photoeditor.views.FilterView
            android:id="@+id/filter_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_large" />


        <SeekBar
            android:id="@+id/filterSeekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_overlay"
            android:progressTint="@color/white"
            android:thumbTint="@color/white"
            android:layout_marginHorizontal="@dimen/margin_medium"
            android:paddingVertical="@dimen/padding_small"
            android:layout_marginBottom="@dimen/margin_large_x" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>